increased preview z-index, to prevent unwanted actions

--- a/cp-styles/app/styles/components/_live-preview.scss
+++ b/cp-styles/app/styles/components/_live-preview.scss
@@ -8,7 +8,7 @@ $ease: cubic-bezier(0.165, 0.84, 0.44, 1);
 	right: 0;
 	bottom: 0;
 	left: 0;
-	z-index: 50;
+	z-index: 250;
 	max-width: 100vw;
 	display: none;
 }
